[tool.poetry]
name = "exemple-10-1-3"
version = "0.1.0"
description = ""
authors = ["Рыбина Лидия <lidiar@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
